--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: c
-os: linux
+os:
+  - linux
+  - linux-ppc64le
+    sudo: false
+  - linux-ppc64le
+    sudo: true
 script: ./build
 compiler:
   - clang
