travis.yml: Update ppc64 config
Signed-off-by: Andrew Donnellan <andrew.donnellan@au1.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: c
-os:
-  - linux
-  - linux-ppc64le
-    sudo: false
-  - linux-ppc64le
-    sudo: true
+matrix:
+  include:
+    - os: linux-ppc64le
+      sudo: false
+    - os: linux-ppc64le
+
 script: ./build
 compiler:
   - clang
